# tdd_clone

./: CMakeLists.txt
TestTask/libs/animal/: CMakeLists.txt
TestTask/libs/animal/include/animal/: animal.h
TestTask/libs/cat/: CMakeLists.txt
TestTask/libs/cat/include/cat/: cat.h
TestTask/libs/cat/source/: cat.cpp
TestTask/libs/cat/test/: test_cat.cpp  test_cat.cpp.autosave
